--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE>
 <html lang="en">
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Survey</title>
   <link rel="stylesheet" href="styles.css" />
   </meta>
