--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <title>Survey</title>
   <link rel="stylesheet" href="styles.css" />
   </meta>
-  <body class="hero-image">
+  <body>
+    <div class="wrapper">
+      <div class="hero-image">
     <form id="survey-form" method="post" action="https://register-demo.freecodecamp.org">
     <h1 id="title">SIGN UP</h1>
     <p id="description">Tell us a about yourself</p>
@@ -58,5 +60,7 @@
         <input type="submit" value="Submit" id="submit" />
       </fieldset>
     </form>
+      </div>
+    </div>
   </body>
 </html>
